--- a/src/form-controls/dexih-form-date.component.html
+++ b/src/form-controls/dexih-form-date.component.html
@@ -1,13 +1,27 @@
-<label *ngIf="label" class="label">{{label}}
-    <ng-content></ng-content>
-</label>
-<label class="input" [ngClass]="{'state-error' : errors}">
-    <i class="icon-append fa fa-calendar" style="cursor: pointer;"></i>
-    <input type="date" [(ngModel)]="value"  (ngModelChange)="hasChanged($event)" />
-</label>
-<em *ngIf="errors" class="invalid">
-    {{errors}}
-</em>
-<div *ngIf="note" class="note">
-    {{note}}
+
+
+<div class="form-group">
+    <label *ngIf="label" [for]="id">{{label}}
+        <ng-content></ng-content>
+    </label>
+
+    <div class="input-group" >
+        <input class="form-control" [id]="id" [disabled]="disabled" [(ngModel)]="value" (ngModelChange)="hasChanged($event)" (keydown)="keydownEvent($event)"
+        type="date" [placeholder]="placeholder ? placeholder : ''" [attr.maxlength]="maxlength"
+            [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}" />
+        <div *ngIf="iconClass" class="input-group-append">
+            <span class="input-group-text">
+                <i *ngIf="iconClass" class="icon-append fa fa-calendar"></i>
+            </span>
+        </div>
+
+        <div *ngIf="errors" class="invalid-feedback">
+            {{ errors }}
+        </div>
+
+    </div>
+
+    <small *ngIf="note" class="form-text text-muted">
+        {{note}}
+    </small>
 </div>
