--- a/src/buttons/dexih-button.component.html
+++ b/src/buttons/dexih-button.component.html
@@ -1,4 +1,4 @@
-<a [class.disabled]="disabled ? true : null" [routerLink]="routerLink" [queryParams]="queryParams" [ngClass]="['btn', 'btn-normal', buttonClass]" [title]="title ? title : text">
+<a [class.disabled]="disabled ? true : null" [routerLink]="routerLink" [queryParams]="queryParams" [ngClass]="['btn', 'btn-secondary', buttonClass]" [title]="title ? title : text">
   <i *ngIf="busy" class="fa fa-spin fa-cog"></i>
   <i [class]="iconClass"></i>
   <span *ngIf="!compact" [ngClass]="[autoCompact ? 'd-none d-md-inline' : '']">
