--- a/src/form-controls/dexih-form-daysofweek.component.html
+++ b/src/form-controls/dexih-form-daysofweek.component.html
@@ -1,42 +1,50 @@
-<label class="label">{{label}}
-    <a (click)="selectAllDays()">(All)</a> <a (click)="selectNoDays()">(None)</a><a (click)="selectWeekend()">(Weekend)</a><a (click)="selectWeekDays()">(Weekdays)</a>
-    <ng-content></ng-content>
-</label>
-<div class="no-padding input-group">
-    <fieldset>
-        <label class="checkbox">
-            <input type="checkbox" [(ngModel)]="daysOfWeek[0]" (ngModelChange)="hasChanged($event)" name="checkSunday"><i></i>
-            <label for="inlineCheckbox2">Sunday </label>
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" [(ngModel)]="daysOfWeek[1]" (ngModelChange)="hasChanged($event)" name="checkMonday"><i></i>
-            <label for="inlineCheckbox3">Monday </label>
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" [(ngModel)]="daysOfWeek[2]" (ngModelChange)="hasChanged($event)" name="checkTuesday"><i></i>
-            <label for="inlineCheckbox3">Tuesday </label>
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" [(ngModel)]="daysOfWeek[3]" (ngModelChange)="hasChanged($event)"  name="checkWednesday" ><i></i>
-            <label for="inlineCheckbox3">Wednesday </label>
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" [(ngModel)]="daysOfWeek[4]" (ngModelChange)="hasChanged($event)" name="checkThursday"><i></i>
-            <label for="inlineCheckbox3">Thursday </label>
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" [(ngModel)]="daysOfWeek[5]" (ngModelChange)="hasChanged($event)" name="checkFriday"><i></i>
-            <label for="inlineCheckbox3">Friday </label>
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" [(ngModel)]="daysOfWeek[6]" (ngModelChange)="hasChanged($event)" name="checkSaturday" /><i></i>
-            <label for="inlineCheckbox2">Saturday </label>
-        </label>
-    </fieldset>
-</div>
-<em *ngIf="errors" class="invalid">
-    {{ errors }}
-</em>
-<div *ngIf="note" class="note">
-    {{note}}
+
+<div class="form-group">
+    <label [for]="id">{{label}}
+        <a class="btn btn-outline-primary btn-sm" (click)="selectAllDays()">All</a> 
+        <a class="btn btn-outline-primary btn-sm" (click)="selectNoDays()">None</a>
+        <a class="btn btn-outline-primary btn-sm" (click)="selectWeekend()">Weekend</a>
+        <a class="btn btn-outline-primary btn-sm" (click)="selectWeekDays()">Weekdays</a>
+        <ng-content></ng-content>
+    </label>
+
+    <div class="input-group">
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" [id]="id + '1'" [(ngModel)]="daysOfWeek[0]" (ngModelChange)="hasChanged($event)">
+            <label class="form-check-label" [for]="id + '1'">Sunday</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" [id]="id + '2'" [(ngModel)]="daysOfWeek[1]" (ngModelChange)="hasChanged($event)">
+            <label class="form-check-label" [for]="id + '2'">Monday</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" [id]="id + '3'" [(ngModel)]="daysOfWeek[2]" (ngModelChange)="hasChanged($event)">
+            <label class="form-check-label" [for]="id + '3'">Tuesday</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" [id]="id + '4'" [(ngModel)]="daysOfWeek[3]" (ngModelChange)="hasChanged($event)">
+            <label class="form-check-label" [for]="id + '4'">Wednesday</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" [id]="id + '5'" [(ngModel)]="daysOfWeek[4]" (ngModelChange)="hasChanged($event)">
+            <label class="form-check-label" [for]="id + '5'">Thursday</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" [id]="id + '6'" [(ngModel)]="daysOfWeek[5]" (ngModelChange)="hasChanged($event)">
+            <label class="form-check-label" [for]="id + '6'">Friday</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox" [id]="id + '7'" [(ngModel)]="daysOfWeek[6]" (ngModelChange)="hasChanged($event)">
+            <label class="form-check-label" [for]="id + '7'">Saturday</label>
+        </div>
+    
+    </div>    
+    <div *ngIf="errors" class="invalid-feedback d-block">
+            {{ errors }}
+        </div>
+
+
+    <small *ngIf="note" class="form-text text-muted">
+        {{note}}
+    </small>
 </div>
