--- a/src/form-controls/dexih-form-tagsDropdown.component.html
+++ b/src/form-controls/dexih-form-tagsDropdown.component.html
@@ -1,26 +1,39 @@
-<label class="label">{{label}}
-    <ng-content></ng-content>
-</label>
-<label *ngIf="subLabel">{{subLabel}}</label>
+<div class="form-group">
+        <label *ngIf="label" [for]="id">{{label}}
+            <ng-content></ng-content>
+        </label>
 
-<label  class="input" [ngClass]="{'state-error' : errors, 'state-success': !errors && isDirty}">
-    <div #dropdown dropdown [autoClose]="false" class="bootstrap-tagsinput">
-            <a dropdownToggle (click)="dropdown.autoClose=false" class="tag btn btn-primary">Add</a>
-            <ul *dropdownMenu  class="dropdown-menu scrollable-menu" role="menu">
-                <li *ngFor="let item of sortedItems | filter: itemName: filterString" [ngClass]="{'active': selectedItem == item}" class="scrollable-item" >
-                    <a  (click)="selectItem(item)" [title]="itemTitle && childItem ? childItem[itemTitle] : ''"> {{itemName && item ? item[itemName] : item}}</a>
-                </li>
-            </ul>
+        <small *ngIf="subLabel" class="form-text">{{subLabel}}</small>
     
-        <span *ngFor="let item of labels; let i = index" class="tag label-info">
-            {{item}}
-            <span (click)="remove(i)" data-role="remove"></span>
-        </span>
+        <div #dropdown dropdown [autoClose]="false" class="border rounded" [ngClass]="{'border-danger': errors, 'border-success': !errors && isDirty}">
+            <div class="input-group">
+                <a dropdownToggle (click)="dropdown.autoClose=false" class="tag btn btn-sm btn-outline-primary m-1">Add</a>
+                <ul *dropdownMenu  class="dropdown-menu scrollable-menu" role="menu">
+                    <li *ngFor="let item of sortedItems | filter: itemName: filterString" [ngClass]="{'active': selectedItem == item}" class="scrollable-item" >
+                        <a class="dropdown-item" (click)="selectItem(item)" [title]="itemTitle && childItem ? childItem[itemTitle] : ''"> {{itemName && item ? item[itemName] : item}}</a>
+                    </li>            
+                </ul>
+    
+                <div *ngFor="let item of labels; let i = index" class="border rounded bg-light my-auto">
+                    {{item}}
+                    <button (click)="remove(i)" type="button" class="close" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+    
+                <div *ngIf="iconClass" class="input-group-append">
+                    <span class="input-group-text">
+                        <i *ngIf="iconClass" class="icon-append {{iconClass}}"></i>
+                    </span>
+                </div>
+    
+            </div>
+        </div>
+        <div *ngIf="errors" class="d-block invalid-feedback">
+            {{ errors }}
+        </div>
+    
+        <small *ngIf="note" class="form-text text-muted">
+            {{note}}
+        </small>
     </div>
-</label>
-<em *ngIf="errors" class="invalid">
-    {{ errors }}
-</em>
-<div *ngIf="note" class="note">
-    {{note}}
-</div>
