--- a/src/widget/dexih-widget.component.html
+++ b/src/widget/dexih-widget.component.html
@@ -1,6 +1,6 @@
 <h2 *ngIf="!showIf" class="ajax-loading-animation"><i class="fa fa-cog fa-spin"></i> {{loadMessage}}</h2>
 <div *ngIf="showIf" [@fadeInAnimation]='state'>
-    <div class="card">
+    <div class="card m-1">
         <div class="card-header" *ngIf="showHeader">
                 <div class="d-flex flex-row">
                     
