--- a/src/buttons/dexih-button.component.html
+++ b/src/buttons/dexih-button.component.html
@@ -2,6 +2,6 @@
   <i *ngIf="busy" class="fa fa-spin fa-cog"></i>
   <i [class]="iconClass"></i>
   <span *ngIf="!compact" [ngClass]="[autoCompact ? 'd-none d-md-inline' : '']">
-      &nbsp;{{text}}<ng-content></ng-content>            
+      {{text}}<ng-content></ng-content>            
   </span>
 </a>
