--- a/src/form-controls/dexih-form-select.component.html
+++ b/src/form-controls/dexih-form-select.component.html
@@ -1,15 +1,14 @@
 
-<div class="form-group" >
+<div [ngClass]="{'form-group': border}">
     <label *ngIf="label" [for]="id" >{{label}}
         <ng-content></ng-content>
     </label>
     
-    <div class="input-group" >
-    <div #dropdown dropdown [autoClose]="false" class="btn-group" style="width: 100%" >
+    <div #dropdown dropdown [autoClose]="false" class="input-group" style="width: 100%" >
             <div class="input-group" [id]="id" dropdownToggle (click)="dropdown.autoClose=false"  style="width: 100%">
-                <input disabled class="form-control bg-white" [value]="selectedName"  [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}"/>
+                <input disabled class="form-control bg-white" [value]="selectedName"  [ngClass]="{'border-top-0 border-bottom-0 border-left-0': !border, 'is-invalid': errors, 'is-valid': !errors && isDirty}"/>
                 <div class="input-group-append">
-                    <span class="input-group-text">
+                    <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}">
                         <i class="icon-append fa fa-caret-down"></i>
                     </span>
                 </div>
@@ -84,7 +83,6 @@
             </ng-template>
         </ul>
         <ng-template></ng-template>
-    </div>
 </div>
     <small *ngIf="note" class="form-text text-muted">
         {{note}}
