--- a/src/form-controls/dexih-form-tags.component.html
+++ b/src/form-controls/dexih-form-tags.component.html
@@ -1,11 +1,11 @@
-<div class="form-group">
+<div [ngClass]="{'form-group': border}">
     <label *ngIf="label" [for]="id">{{label}}
         <ng-content></ng-content>
     </label>
 
     <small *ngIf="subLabel" class="form-text">{{subLabel}}</small>
 
-    <div class="border rounded" [ngClass]="{'border-danger': errors, 'border-success': !errors && isDirty}">
+    <div [ngClass]="{'border rounded': border, 'border-danger': errors, 'border-success': !errors && isDirty}">
         <div class="input-group">
             <div *ngFor="let item of value" class="border rounded bg-light m-1">
                 {{item}}
@@ -17,7 +17,7 @@
                 [placeholder]="placeholder ? placeholder : ''" [attr.maxlength]="maxlength" [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}"
             />
             <div *ngIf="iconClass" class="input-group-append">
-                <span class="input-group-text">
+                <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}">
                     <i *ngIf="iconClass" class="icon-append {{iconClass}}"></i>
                 </span>
             </div>
