--- a/src/form-controls/dexih-form-tagsDropdown.component.html
+++ b/src/form-controls/dexih-form-tagsDropdown.component.html
@@ -1,11 +1,11 @@
-<div class="form-group">
+<div [ngClass]="{'form-group': border}">
         <label *ngIf="label" [for]="id">{{label}}
             <ng-content></ng-content>
         </label>
 
         <small *ngIf="subLabel" class="form-text">{{subLabel}}</small>
     
-        <div #dropdown dropdown [autoClose]="false" class="border rounded" [ngClass]="{'border-danger': errors, 'border-success': !errors && isDirty}">
+        <div #dropdown dropdown [autoClose]="false" class="border rounded" [ngClass]="{'border rounded': border, 'border-danger': errors, 'border-success': !errors && isDirty}">
             <div class="input-group">
                 <a dropdownToggle (click)="dropdown.autoClose=false" class="tag btn btn-sm btn-outline-primary m-1">Add</a>
                 <ul *dropdownMenu  class="dropdown-menu scrollable-menu" role="menu">
@@ -22,7 +22,7 @@
                 </div>
     
                 <div *ngIf="iconClass" class="input-group-append">
-                    <span class="input-group-text">
+                    <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}">
                         <i *ngIf="iconClass" class="icon-append {{iconClass}}"></i>
                     </span>
                 </div>
