--- a/src/form-controls/dexih-form-textarea.component.html
+++ b/src/form-controls/dexih-form-textarea.component.html
@@ -22,8 +22,8 @@
         </small>
     </div>
     <div>
-        <span *ngIf="!isHidden">Preview</span>
-        <div>
+        <label *ngIf="!isHidden">Preview</label>
+        <div class="border rounded p-2">
             <markdown *ngIf="value" [data]="value"></markdown>
         </div>
     </div>
