--- a/src/buttons/dexih-button-dropdown.component.html
+++ b/src/buttons/dexih-button-dropdown.component.html
@@ -1,12 +1,12 @@
-<div class="btn-group" dropdown>
+<div class="btn-group" dropdown placement="bottom right">
   <button dropdownToggle type="button" [disabled]="disabled" [ngClass]="['btn', 'btn-primary', 'dropdown-toggle', buttonClass]" [title]="title">
     <i *ngIf="busy" class="fa fa-spin fa-cog"></i>
     <i [class]="iconClass"></i>
-    <span *ngIf="!compact" [ngClass]="[autoCompact ? 'd-none d-md-inline' : '']">
+    <span *ngIf="!compact" class="d-none d-md-inline">
         &nbsp;{{text}}        
     </span>
   </button>
-  <ul *dropdownMenu class="dropdown-menu" [class.pull-right]="pullRight" >
+  <ul *dropdownMenu class="dropdown-menu" [ngClass]="{'dropdown-menu-right': pullRight}">
     <ng-content></ng-content>
   </ul>
 </div>
