--- a/src/buttons/dexih-button-splitdropdown.component.html
+++ b/src/buttons/dexih-button-splitdropdown.component.html
@@ -9,7 +9,7 @@
   <button type="button" dropdownToggle [disabled]="disabled" [ngClass]="['btn', 'btn-primary', 'dropdown-toggle', buttonClass]" title="Options">
     <i *ngIf="busy" class="fa fa-spin fa-cog"></i>
   </button>
-  <ul *dropdownMenu class="dropdown-menu" [class.pull-right]="pullRight" >
+  <ul *dropdownMenu class="dropdown-menu" [class.dropdown-menu-right]="pullRight" >
     <ng-content></ng-content>
   </ul>
 </div>
