fixed AOT  issues

--- a/src/form-controls/dexih-form-date.component.html
+++ b/src/form-controls/dexih-form-date.component.html
@@ -6,8 +6,8 @@
     </label>
 
     <div class="input-group" >
-        <input class="form-control" [id]="id" [disabled]="disabled" [(ngModel)]="value" (ngModelChange)="hasChanged($event)" (keydown)="keydownEvent($event)"
-        type="date" [placeholder]="placeholder ? placeholder : ''" [attr.maxlength]="maxlength"
+        <input class="form-control" [id]="id" [disabled]="disabled" [(ngModel)]="value" (ngModelChange)="hasChanged($event)"
+        type="date" [placeholder]="placeholder ? placeholder : ''"
             [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}" />
         <div *ngIf="iconClass" class="input-group-append">
             <span class="input-group-text">
