--- a/src/form-controls/dexih-form-textarea.component.html
+++ b/src/form-controls/dexih-form-textarea.component.html
@@ -21,7 +21,7 @@
             {{note}}
         </small>
     </div>
-    <div>
+    <div *ngIf="showPreview && value">
         <label *ngIf="!isHidden">Preview</label>
         <div class="border rounded p-2">
             <markdown *ngIf="value" [data]="value"></markdown>
