--- a/src/widget/dexih-widget.component.html
+++ b/src/widget/dexih-widget.component.html
@@ -1,13 +1,13 @@
 <h2 *ngIf="!showIf" class="ajax-loading-animation">
     <i class="fa fa-cog fa-spin"></i> {{loadMessage}}</h2>
 <div *ngIf="showIf" [@fadeInAnimation]='state'>
-    <div class="card m-1">
-        <div class="card-header" *ngIf="showHeader">
-            <div class="d-flex flex-row">
+    <div class="card">
+        <div class="card-header" *ngIf="title || iconClass || headerTemplate || showFilter">
+            <div class="d-flex flex-row p-0">
 
-                <span class="">
+                <span>
                     <i class="{{iconClass}}"></i>
-                    <b>{{title}}</b>
+                    <b>hui {{title}}</b>
                 </span>
 
                 <div class="d-flex ml-auto">
@@ -16,50 +16,51 @@
                         </ng-template>
                     </div>
 
-                    <button *ngIf="showCloseButton" type="button" class="close" (click)="doClose()" aria-label="Close">
+                    <div *ngIf="showFilter" class=" mr-3 ml-3">
+                    <div  class="input-group">
+                            <span class="input-group-addon input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fa fa-search"></i>
+                                </span>
+                            </span>
+                            <input [ngModel]="filter" [formControl]="filterControl" type="text" placeholder="Filter the items">
+                        </div>
+                </div>
+                    <button *ngIf="showCloseButton" type="button" class="close ml-2" (click)="doClose()" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
+
+        
             </div>
-
-
-            <div *ngIf="showFilter" class="pull-right" role="menu">
-                <label class="input">
-                    <i class="icon-append fa fa-search"></i>
-                    <input [ngModel]="filter" [formControl]="filterControl" type="text" placeholder="Filter the items">
-                </label>
-            </div>
-
-
         </div>
+
+        <div class="card-header bg-light" *ngIf="subtitleTemplate || subtitle || toolsTemplate">
+                <div class="d-flex flex-row">
+                    <div class="card-subtitle">{{subtitle}}</div>
+                    <ng-template [ngTemplateOutlet]="subtitleTemplate">
+                    </ng-template>
+                    <div class="d-flex ml-auto">
+                        <ng-template [ngTemplateOutlet]="toolsTemplate">
+                        </ng-template>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-header" *ngIf="subheaderTemplate">
+                <ng-template [ngTemplateOutlet]="subheaderTemplate">
+                </ng-template>
+            </div>
+    
+
         <div class="card-body" [ngClass]="{'px-0 py-0': !padding}">
-
-            <div class="widget-body-toolbar" *ngIf="showToolbar">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h5>{{subTitle}}</h5>
-                        <ng-template [ngTemplateOutlet]="subtitleTemplate">
-                        </ng-template>
-                    </div>
-                    <div class="col-sm-6 pull-right">
-                        <div class="pull-right">
-                            <ng-template [ngTemplateOutlet]="actionsTemplate">
-                            </ng-template>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="widget-body-toolbar" *ngIf="showSubHeader">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <ng-template [ngTemplateOutlet]="subHeaderTemplate">
-                        </ng-template>
-                    </div>
-                </div>
-            </div>
-
             <ng-content></ng-content>
         </div>
+
+        <div *ngIf="footerTemplate" class="card-footer">
+            <ng-template [ngTemplateOutlet]="footerTemplate">
+            </ng-template>
+        </div>
+
     </div>
 </div>
