--- a/src/widget/dexih-widget.component.html
+++ b/src/widget/dexih-widget.component.html
@@ -7,7 +7,7 @@
 
                 <span>
                     <i class="{{iconClass}}"></i>
-                    <b>hui {{title}}</b>
+                    <b>{{title}}</b>
                 </span>
 
                 <div class="d-flex ml-auto">
