added manual to button dropdown

--- a/src/buttons/dexih-button-dropdown.component.html
+++ b/src/buttons/dexih-button-dropdown.component.html
@@ -1,5 +1,6 @@
-<div class="btn-group" dropdown placement="bottom right">
-  <button dropdownToggle type="button" [disabled]="disabled" class="btn {{buttonClass}}" [ngClass]="{'dropdown-toggle': !hideCarrot}" [title]="title">
+<div class="btn-group" dropdown #dropdown="bs-dropdown" [autoClose]="autoClose" [isOpen]="isOpen" (isOpenChange)="openChange($event)" placement="bottom right">
+  <button dropdownToggle type="button" 
+    [disabled]="disabled" class="btn {{buttonClass}}" [ngClass]="{'dropdown-toggle': !hideCarrot}" [title]="title">
     <i *ngIf="busy" class="fa fa-spin fa-cog"></i>
     <i [class]="iconClass"></i>
     <span *ngIf="!compact" class="d-none d-md-inline">
