--- a/src/form-controls/dexih-form-select.component.html
+++ b/src/form-controls/dexih-form-select.component.html
@@ -6,7 +6,7 @@
     
     <div #dropdown dropdown [autoClose]="false" class="input-group" style="width: 100%" >
             <div class="input-group" [id]="id" dropdownToggle (click)="dropdown.autoClose=false"  style="width: 100%">
-                <input disabled class="form-control bg-white" [value]="selectedName"  [ngClass]="{'border-top-0 border-bottom-0 border-left-0': !border, 'is-invalid': errors, 'is-valid': !errors && isDirty}"/>
+                <input [attr.disabled]="enableFilter ? null : ''" [formControl]="manualControl" [placeholder]="textEntryNote" (keyup.enter)="onTextEntryEnter($event)" class="form-control bg-white disabled-input" [ngClass]="{'border-top-0 border-bottom-0 border-left-0': !border, 'is-invalid': errors, 'is-valid': !errors && isDirty}"/>
                 <div class="input-group-append">
                     <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}">
                         <i class="icon-append fa fa-caret-down"></i>
@@ -19,7 +19,7 @@
 
 
         <ul *dropdownMenu  class="dropdown-menu scrollable-menu" role="menu" style="width:100%">
-            <label *ngIf="enableTextEntry" class="input dropdown-header scrollable-menu-fixed  p-1">
+            <!-- <label *ngIf="enableTextEntry" class="input dropdown-header scrollable-menu-fixed  p-1">
                 <div class="input-group">
                     <input type="text" class="form-control" [formControl]="manualControl" [placeholder]="textEntryNote" (keyup.enter)="onTextEntryEnter($event)" tabindex="0" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" role="textbox">
                     <div class="input-group-append">
@@ -28,9 +28,9 @@
                         </span>
                     </div>
                 </div>
-            </label>
+            </label> -->
 
-            <div *ngIf="enableFilter" class="dropdown-header scrollable-menu-fixed p-1">
+            <!-- <div *ngIf="enableFilter" class="dropdown-header scrollable-menu-fixed p-1">
                 <div class="input-group">
                     <input type="search" class="form-control" [formControl]="filterControl" placeholder="Filter list..." tabindex="0" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" role="textbox" style="width: 300px">
                     <div class="input-group-append">
@@ -39,7 +39,7 @@
                         </span>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <ng-template [ngIf]="items">
                 <li *ngIf="allowNullSelect" >
