--- a/src/form-controls/dexih-form-select.component.html
+++ b/src/form-controls/dexih-form-select.component.html
@@ -13,7 +13,7 @@
                     (keydown.arrowup)="up()"
                     (keyup.enter)="onTextEntryEnter($event)" 
                     class="form-control bg-white disabled-input" 
-                    [ngClass]="{'border-top-0 border-bottom-0 border-left-0': !border, 'is-invalid': errors, 'is-valid': !errors && isDirty}"
+                    [ngClass]="{'border-top-0 border-bottom-0 border-left-0': !border, 'is-invalid': errors, 'is-valid': !errors && isDirty, 'font-italic': !selectedItem && textValue }"
                     (focusout)="dropdownHide()"
                     />
                 <div class="input-group-append">
