--- a/src/form-controls/dexih-form-checkbox.component.html
+++ b/src/form-controls/dexih-form-checkbox.component.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div [ngClass]="{'form-group': border}">
     <div class="form-check" >
         <input class="form-check-input" [id]="id" type="checkbox"  [disabled]="disabled" [(ngModel)]="value" (ngModelChange)="hasChanged($event)" 
             [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}" />
