--- a/src/widget/dexih-widget.component.html
+++ b/src/widget/dexih-widget.component.html
@@ -1,7 +1,4 @@
-<h2 *ngIf="!showIf" class="ajax-loading-animation">
-    <i class="fa fa-cog fa-spin"></i> {{loadMessage}}</h2>
-<div *ngIf="showIf" [@fadeInAnimation]='state'>
-    <div class="card">
+    <div class="card" [@fadeInAnimation]='state'>
         <div class="card-header" *ngIf="title || iconClass || headerTemplate || showFilter">
             <div class="d-flex flex-row p-0">
 
@@ -54,7 +51,15 @@
     
 
         <div class="card-body" [ngClass]="{'px-0 py-0': !padding}">
-            <ng-content></ng-content>
+            <div *ngIf="!showIf">
+                <div class="table-loader-container">
+                    <div class="table-loader"></div>
+                    <div name="dexih-data-loading" class="table-loader-text">{{loadingMessage}}</div>
+                </div>
+            </div>
+            <div *ngIf="showIf">
+                <ng-content></ng-content>
+            </div>
         </div>
 
         <div *ngIf="footerTemplate" class="card-footer">
@@ -63,4 +68,3 @@
         </div>
 
     </div>
-</div>
