added autoCompact to dropdown button

--- a/src/buttons/dexih-button-dropdown.component.html
+++ b/src/buttons/dexih-button-dropdown.component.html
@@ -3,7 +3,7 @@
     [disabled]="disabled" class="btn {{buttonClass}}" [ngClass]="{'dropdown-toggle': !hideCarrot}" [title]="title">
     <i *ngIf="busy" class="fa fa-spin fa-cog"></i>
     <i [class]="iconClass"></i>
-    <span *ngIf="!compact" class="d-none d-md-inline">
+    <span *ngIf="!compact" [ngClass]="[autoCompact ? 'd-none d-md-inline' : '']">
         &nbsp;{{text}}        
     </span>
     <span *ngIf="badge" class="badge" [ngClass]="[badgeClass]">{{badge}}</span>
