fix progress & hidding text without icon.

--- a/src/progress/dexih-progress.component.html
+++ b/src/progress/dexih-progress.component.html
@@ -1,15 +1,16 @@
 <div>
-    <div dexihProgress [animate]="animate" [max]="max" [ngStyle]="{'min-width': width, 'height': height}" style="width:100%" class="bg-secondary">
-        <div (click)="onClick()" class="bg-secondary" style="width: 100%;">
-
-            <dexih-bar [type]="type" [value]="value" [max]="max" [height]="height" >
+    <div dexihProgress [animate]="animate" [max]="max" [ngStyle]="{'min-width': width, 'height': height }" style="width:100%" class="bg-secondary">
+    
+        <div (click)="onClick()" class="bg-secondary" [ngClass]="{'progress-width': showCancel, 'w-100': !showCancel}" style="display: inline-block">
+            <dexih-bar [type]="type" [value]="value" [max]="max" [height]="height">
                 <p class="content">
                     <ng-content></ng-content>
                 </p>
             </dexih-bar>
         </div>
-        <a *ngIf="showCancel" class="btn btn-sm btn-danger text-white rounded-0" title="Cancel the task" (click)="cancelClick()">
-            <i class="fa fa-ban"></i>
-        </a>
+        <a *ngIf="showCancel" class="btn btn-sm btn-danger text-white rounded-0 pull-right" style="display: inline-block" title="Cancel the task" (click)="cancelClick()">
+                <i class="fa fa-ban"></i>
+            </a>
+    
     </div>
 </div>
