--- a/src/buttons/dexih-button.component.html
+++ b/src/buttons/dexih-button.component.html
@@ -3,7 +3,7 @@
   <i *ngIf="busy" class="fa fa-spin fa-spinner"></i>
 
   <i [class]="iconClass"></i>
-  <span *ngIf="!compact" [ngClass]="[autoCompact ? 'd-none d-md-inline' : '']">
+  <span *ngIf="!compact" [ngClass]="[autoCompact && iconClass ? 'd-none d-md-inline' : '']">
     {{text}}
     <ng-content></ng-content>
     <span *ngIf="badge" class="badge " [ngClass]="[badgeClass]">{{badge}}</span>
