--- a/src/progress/dexih-bar.component.html
+++ b/src/progress/dexih-bar.component.html
@@ -1,5 +1,5 @@
   <div class="progress-bar"
-    style="min-width: 0; margin-right: -200px"
+    style="min-width: 0"
     role="progressbar"
     [ngClass]="type && 'bg-' + type"
     [ngStyle]="{width: (percent < 100 ? percent : 100) + '%', transition: transition, height: height}"
