--- a/src/progress/dexih-progress.component.scss
+++ b/src/progress/dexih-progress.component.scss
@@ -1,3 +1,10 @@
+
+.progress-width {
+    width: -webkit-calc(100% - 30px);
+    width:    -moz-calc(100% - 30px);
+    width:         calc(100% - 30px);
+}​
+
 .content {
     cursor: pointer ; 
     display:inline; 
