--- a/src/form-controls/dexih-form-tagsDropdown.component.html
+++ b/src/form-controls/dexih-form-tagsDropdown.component.html
@@ -1,45 +1,52 @@
-<div [ngClass]="{'form-group': border}">
-        <label *ngIf="label" [for]="id">{{label}}
-            <ng-content></ng-content>
-        </label>
+<div>
+    <label *ngIf="label" [for]="id">{{label}}
+        <ng-content></ng-content>
+    </label>
 
-        <small *ngIf="subLabel" class="form-text">{{subLabel}}</small>
-    
-        <div #dropdown dropdown [autoClose]="false" [ngClass]="{'border rounded': border, 'border-danger': errors, 'border-success': !errors && isDirty}">
-            <div class="input-group">
-                <a dropdownToggle (click)="dropdown.autoClose=false" class="tag btn btn-sm btn-outline-primary m-1">Add</a>
-                <ul *dropdownMenu  class="dropdown-menu scrollable-menu" role="menu">
-                    <li *ngIf="enableAddAll" class="scrollable-item" >
-                        <a class="dropdown-item" (click)="addAll()" title="Add all items to the list">Add all</a>
-                    </li>            
-        
-                    <li *ngFor="let item of sortedItems | filter: itemName: filterString" [ngClass]="{'active': selectedItem == item}" class="scrollable-item" >
-                        <a class="dropdown-item" (click)="selectItem(item)" [title]="item.title"> {{item.label}}</a>
-                    </li>            
-                </ul>
+    <small *ngIf="subLabel" class="form-text">{{subLabel}}</small>
 
-                <a (click)="clearAll()" class="tag btn btn-sm btn-danger text-white m-1"><span aria-hidden="true">&times;</span></a>
+    <div #dropdown dropdown [ngClass]="{'border rounded': border, 'border-danger': errors, 'border-success': !errors && isDirty}">
+        <div class="input-group" dropdownToggle (click)="dropdown.autoClose=false">
+            <div  class="input-group-prepend">
+                <span *ngIf="labelLeft" class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}">{{labelLeft}}</span>
+            </div>
+            <ul *dropdownMenu class="w-100 dropdown-menu scrollable-menu" role="menu">
+                <li *ngIf="enableAddAll" class="scrollable-item">
+                    <a class="dropdown-item" (click)="addAll()" title="Add all items to the list">Add all</a>
+                </li>
+                <li class="scrollable-item">
+                    <a class="dropdown-item" (click)="clearAll()" title="Clear all items">Clear all</a>
+                </li>
 
-                <div *ngFor="let item of labels; let i = index" class="border rounded bg-light my-auto mr-1">
-                    {{item}}
-                    <button (click)="remove(i)" type="button" class="close" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-    
-                <div *ngIf="iconClass" class="input-group-append">
-                    <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}">
-                        <i *ngIf="iconClass" class="icon-append {{iconClass}}"></i>
-                    </span>
-                </div>
-    
+                <div class="dropdown-divider"></div>
+
+                <li *ngFor="let item of sortedItems | filter: itemName: filterString" [ngClass]="{'active': selectedItem == item}" class="scrollable-item">
+                    <a  class="dropdown-item" (click)="selectItem(item, true)" [title]="item.title"> {{item.label}}</a>
+                </li>
+            </ul>
+
+            <div *ngFor="let item of labels; let i = index" class="border rounded bg-light my-auto ml-1">
+                {{item}}
+                <button (click)="remove(i)" type="button" class="close" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <input class="form-control border-0 rounded-0 invisible" [disabled]="true">
+
+            <div  class="input-group-append">
+                <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}">
+                    <i *ngIf="items && items.length > 0" class="icon-append fa fa-caret-down"></i>
+                    <i  *ngIf="iconClass && (!items || items.length == 0) " class="icon-append {{iconClass}}"></i>
+                </span>
             </div>
         </div>
-        <div *ngIf="errors" class="d-block invalid-feedback">
-            {{ errors }}
-        </div>
-    
-        <small *ngIf="note" class="form-text text-muted">
-            {{note}}
-        </small>
     </div>
+    <div *ngIf="errors" class="d-block invalid-feedback">
+        {{ errors }}
+    </div>
+
+    <small *ngIf="note" class="form-text text-muted">
+        {{note}}
+    </small>
+</div>
