--- a/src/form-controls/dexih-form-checkbox.component.html
+++ b/src/form-controls/dexih-form-checkbox.component.html
@@ -1,11 +1,32 @@
-<div [ngClass]="{'form-group': border}">
-    <div class="form-check" >
-        <input class="form-check-input" [id]="id" type="checkbox"  [disabled]="disabled" [(ngModel)]="value" (ngModelChange)="hasChanged($event)" 
-            [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}" />
-        <label class="form-check-label" *ngIf="label" [for]="id">{{label}}
-            <ng-content></ng-content>
-        </label>
-        <div *ngIf="errors" class="invalid-feedback">
+<div *ngIf="!border">
+    <div class="form-check">
+        <div [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}">
+            <input class="form-check-input" [id]="id" type="checkbox" [disabled]="disabled" [(ngModel)]="value" (ngModelChange)="hasChanged($event)"
+                [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}" />
+            <label class="form-check-label" *ngIf="label" [for]="id">{{label}}
+                <ng-content></ng-content>
+            </label>
+            <div *ngIf="errors" class="invalid-feedback">
+                {{ errors }}
+            </div>
+        </div>
+    </div>
+
+    <small *ngIf="note" class="form-text text-muted">
+        {{note}}
+    </small>
+</div>
+<div *ngIf="border">
+    <div class="input-group">
+        <div class="input-group-text w-100" [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}">
+            <input [id]="id" type="checkbox" [disabled]="disabled" [(ngModel)]="value" (ngModelChange)="hasChanged($event)"
+                [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}" />
+            <label class="form-check-label" *ngIf="label" [for]="id">{{label}}
+                <ng-content></ng-content>
+            </label>
+        </div>
+
+        <div *ngIf="errors" class="invalid-feedback d-block">
             {{ errors }}
         </div>
     </div>
