--- a/src/form-controls/dexih-form-date.component.html
+++ b/src/form-controls/dexih-form-date.component.html
@@ -1,11 +1,15 @@
 
 
-<div class="form-group">
+<div>
     <label *ngIf="label" [for]="id">{{label}}
         <ng-content></ng-content>
     </label>
 
     <div class="input-group" >
+        <div *ngIf="labelLeft" class="input-group-prepend">
+            <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}"> {{labelLeft}}</span>
+        </div>
+
         <input class="form-control" [id]="id" [disabled]="disabled" [(ngModel)]="value" (ngModelChange)="hasChanged($event)"
         type="date" [placeholder]="placeholder ? placeholder : ''"
             [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}" />
