--- a/src/form-controls/dexih-form-input.component.html
+++ b/src/form-controls/dexih-form-input.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{'form-group': border}">
+<div>
     <label *ngIf="label" [for]="id">{{label}}
         <ng-content></ng-content>
     </label>
@@ -6,6 +6,10 @@
     <small *ngIf="subLabel" class="form-text">{{subLabel}}</small>
 
     <div class="input-group m-0" >
+        <div *ngIf="labelLeft" class="input-group-prepend">
+            <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}"> {{labelLeft}}</span>
+        </div>
+
         <input class="form-control" [id]="id" [disabled]="disabled" [(ngModel)]="value" (ngModelChange)="hasChanged($event)" (keydown)="keydownEvent($event)"
             [type]="type" [placeholder]="placeholder ? placeholder : ''" [attr.maxlength]="maxlength"
             [ngClass]="{'border-top-0 border-bottom-0 border-left-0 rounded-0': !border, 'is-invalid': errors, 'is-valid': !errors && isDirty}" />
