--- a/src/form-controls/dexih-form-select.component.html
+++ b/src/form-controls/dexih-form-select.component.html
@@ -1,12 +1,17 @@
 
-<div [ngClass]="{'form-group': border}">
+<div>
     <label *ngIf="label" [for]="id" >{{label}}
         <ng-content></ng-content>
     </label>
     
     <div #dropdown dropdown [autoClose]="false" class="input-group" style="width: 100%" >
             <div class="input-group" [id]="id" (click)="dropdownToggle()" style="width: 100%">
-                <input [attr.disabled]="enableFilter || enableTextEntry ? null : ''" 
+                <div *ngIf="labelLeft" class="input-group-prepend">
+                    <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}"> {{labelLeft}}</span>
+                </div>
+
+                <input 
+                    [attr.disabled]="enableFilter || enableTextEntry ? null : ''" 
                     [formControl]="manualControl" 
                     [placeholder]="textEntryNote" 
                     (keydown.arrowdown)="down()"
@@ -16,6 +21,7 @@
                     [ngClass]="{'border-top-0 border-bottom-0 border-left-0': !border, 'is-invalid': errors, 'is-valid': !errors && isDirty, 'font-italic': !selectedItem && textValue }"
                     (focusout)="dropdownHide()"
                     />
+
                 <div class="input-group-append">
                     <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}">
                         <i *ngIf="items && items.length > 0" class="icon-append fa fa-caret-down"></i>
