--- a/src/form-controls/dexih-form-textarea.component.html
+++ b/src/form-controls/dexih-form-textarea.component.html
@@ -1,17 +1,26 @@
-<div class="form-group">
+<div>
     <label *ngIf="label" [for]="id">
         {{label}}
         <a class="btn btn-outline-primary btn-sm" *ngIf="!hideToggle" (click)='toggleState()'>{{isHidden == true ? 'Edit' : 'Hide'}}</a>
         <ng-content></ng-content>
     </label>
-    <div [@slideDown]='state'>
+    <div [@slideDown]="isHidden ? 'hide' : 'show'">
         <div class="input-group">
+            <div *ngIf="labelLeft" class="input-group-prepend">
+                <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}"> {{labelLeft}}</span>
+            </div>
+    
             <textarea class="form-control" [id]="id" [disabled]="disabled" [rows]="rows" [(ngModel)]="value" (ngModelChange)="hasChanged($event)" [placeholder]="placeholder"
                 [ngClass]="{'is-invalid': errors}"></textarea>
             <div *ngIf="iconClass" class="input-group-append">
                 <span class="input-group-text">
                     <i *ngIf="iconClass" class="icon-append {{iconClass}}"></i>
                 </span>
+            </div>
+            <div *ngIf="showCopy" class="input-group-append">
+                <button class="input-group-text" (click)="copy()">
+                    Copy
+                </button>
             </div>
             <div for="inputValue" *ngIf="errors" class="invalid-feedback">
                 {{ errors }}
