--- a/src/form-controls/dexih-form-time.component.html
+++ b/src/form-controls/dexih-form-time.component.html
@@ -1,8 +1,12 @@
-<div class="form-group">
+<div>
     <label *ngIf="label" [for]="id">{{label}}
         <ng-content></ng-content>
     </label>
     <div class="input-group " [ngClass]="{'border-danger': errors, 'border-success': !errors && isDirty}">
+            <div *ngIf="labelLeft" class="input-group-prepend">
+                <span class="input-group-text" [ngClass]="{'border-0 rounded-0': !border}"> {{labelLeft}}</span>
+            </div>
+
             <div class="w-19 m-1">
                 <input type="number" class="form-control"  [(ngModel)]="hours" (ngModelChange)="hasChanged($event)"
                     [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}"
