--- a/src/form-controls/dexih-form-select.component.html
+++ b/src/form-controls/dexih-form-select.component.html
@@ -1,6 +1,6 @@
 
 <div>
-    <label *ngIf="label" [for]="id" >{{label}}
+    <label *ngIf="label" [for]="id" class="mt-1">{{label}}
         <ng-content></ng-content>
     </label>
     
@@ -85,7 +85,7 @@
         <ng-template></ng-template>
 </div>
     <small *ngIf="note" class="form-text text-muted">
-        {{note}}
+        <markdown (click)="sharedFunctions.getRoute($event)" [data]="note"></markdown>
     </small>     
 
 </div>
