--- a/src/form-controls/dexih-form-time.component.html
+++ b/src/form-controls/dexih-form-time.component.html
@@ -1,5 +1,5 @@
 <div>
-    <label *ngIf="label" [for]="id">{{label}}
+    <label *ngIf="label" [for]="id" class="mt-1">{{label}}
         <ng-content></ng-content>
     </label>
     <div class="input-group " [ngClass]="{'border-danger': errors, 'border-success': !errors && isDirty}">
@@ -31,6 +31,6 @@
             {{ errors }}
         </div>
         <small *ngIf="note" class="form-text text-muted">
-            {{note}}
+            <markdown (click)="sharedFunctions.getRoute($event)" [data]="note"></markdown>
         </small>
     </div>
