--- a/src/form-controls/dexih-form-tags.component.html
+++ b/src/form-controls/dexih-form-tags.component.html
@@ -1,5 +1,5 @@
 <div>
-    <label *ngIf="label" [for]="id">{{label}}
+    <label *ngIf="label" [for]="id" class="mt-1">{{label}}
         <ng-content></ng-content>
     </label>
 
@@ -34,6 +34,6 @@
     </div>
 
     <small *ngIf="note" class="form-text text-muted">
-        {{note}}
+        <markdown (click)="sharedFunctions.getRoute($event)" [data]="note"></markdown>
     </small>
 </div>
