--- a/src/form-controls/dexih-form-checkbox.component.html
+++ b/src/form-controls/dexih-form-checkbox.component.html
@@ -3,8 +3,8 @@
         <div [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}">
             <input class="form-check-input" [id]="id" type="checkbox" [disabled]="disabled" [(ngModel)]="value" (ngModelChange)="hasChanged($event)"
                 [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}" />
-            <label class="form-check-label" *ngIf="label" [for]="id">{{label}}
-                <ng-content></ng-content>
+            <label class="form-check-label" [for]="id">{{label}}
+                <ng-container *ngTemplateOutlet="tempOutlet" ></ng-container>
             </label>
             <div *ngIf="errors" class="invalid-feedback">
                 {{ errors }}
@@ -21,8 +21,8 @@
         <div class="input-group-text w-100" [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}">
             <input [id]="id" type="checkbox" [disabled]="disabled" [(ngModel)]="value" (ngModelChange)="hasChanged($event)"
                 [ngClass]="{'is-invalid': errors, 'is-valid': !errors && isDirty}" />
-            <label class="form-check-label" *ngIf="label" [for]="id">{{label}}
-                <ng-content></ng-content>
+            <label class="form-check-label" [for]="id">{{label}}
+                <ng-container *ngTemplateOutlet="tempOutlet" ></ng-container>
             </label>
         </div>
 
@@ -35,3 +35,7 @@
         <markdown (click)="sharedFunctions.getRoute($event)" [data]="note"></markdown>
     </small>
 </div>
+
+<ng-template #tempOutlet>
+    <ng-content></ng-content>
+</ng-template>
